<resources>
    <string name="app_name">AppBella</string>

    <string name="FACEBOOK_APP_ID">455731598310249</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">1acd25fdb8382620bb462dbdc48e11d8</string>
    <string name="title_activity_home">My Restaurant</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="Name">Nombre</string>
    <string name="Address">Dirección</string>
    <string name="Doc">Número de identificación</string>
    <string name="Update">Actualizar</string>
    <string name="UserInfo">Información del Usuario</string>
    <string name="update_information">Actualizar Información</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="sign_out">Cerrar sesión</string>
    <string name="nearby_restaurant">Nearby Restaurant</string>
    <string name="order_history">Order History</string>
    <string name="update_info">Update Infomation</string>
    <string name="our_specialized">Our Specialized</string>
    <string name="money_sign">$</string>
    <string name="view_cart">Ver Carrito</string>
    <string name="add_on">Add On</string>
    <string name="description">Description</string>
    <string name="size">Size</string>
    <string name="search">Search</string>
    <string name="menu_fav">Favorite</string>
    <string name="place_order">Terminar Orden</string>
    <string name="cart">Compras</string>
    <string name="empty_cart">Carro Vacio</string>
    <string name="your_order">Your Order</string>
    <string name="title_activity_nearby_restaurant">Map</string>
    <string name="image_description">" "</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
