<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="bottom"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="19dp"
        android:paddingLeft="19dp"
        android:paddingTop="37dp"
        android:paddingEnd="19dp"
        android:paddingRight="19dp"
        android:paddingBottom="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:contentDescription="@string/nav_header_desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_ticket" />

    </LinearLayout>

    <TextView
        android:id="@+id/txt_user_name"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_History_Shoppings"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_user_name"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/img_shopping_history"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_History_Shoppings">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divider" />

        <LinearLayout
            android:id="@+id/layout_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingStart="14dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="10dp"
                android:scaleType="fitXY"
                android:contentDescription="@string/image_description"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/division" />

        <LinearLayout
            android:id="@+id/layout_wallet"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical|start"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/image_description"
                android:scaleType="fitXY" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="Creditos"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/txt_balance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:gravity="center|end"
                android:text="0"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/division" />

        <LinearLayout
            android:id="@+id/card_my_reports"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical|start"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/image_description"
                android:scaleType="fitXY"
                android:src="@drawable/ic_ticket" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="Cupones"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divider" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/card0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divider" />

        <LinearLayout
            android:id="@+id/layout_title0"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingStart="14dp"
                android:text="Mi Cuenta"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/image_description"
                android:scaleType="fitXY"
                android:src="@drawable/ic_expansion_header_indicator_grey_24dp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/division" />

        <LinearLayout
            android:id="@+id/layout_profile"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical|start"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/image_description"
                android:scaleType="fitXY" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="Perfil"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divider" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/card1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card0">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divider" />

        <LinearLayout
            android:id="@+id/layout_title1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingStart="14dp"
                android:text="Informacion"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/image_description"
                android:scaleType="fitXY"
                android:src="@drawable/ic_expansion_header_indicator_grey_24dp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/division" />

        <LinearLayout
            android:id="@+id/layout_Work_with_us"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical|start"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/image_description"
                android:scaleType="fitXY" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/division" />

        <LinearLayout
            android:id="@+id/layout_Terminos_Condiciones"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical|start"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/image_description"
                android:scaleType="fitXY" />

            <TextView
                android:layout_width="165dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="Terminos y condiciones"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divider" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card1">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical|start"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/image_description"
                android:scaleType="fitXY" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:text="@string/sign_out"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divider" />

    </LinearLayout>

    <TextView
        android:id="@+id/txt_version"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="Version"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_logout" />


</androidx.constraintlayout.widget.ConstraintLayout>
